--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,4 +48,29 @@ img {max-width:100;}
 
 body {
     transition: opacity .25s ease;
+    
+    .avatar{
+        width:'50px'
+    }
+        
+    .repo{
+        padding-left:20px;
+        background: #eee;
+        border-top:1px solid #ccc;
+    }
+    #userInfo{
+        width:20%;
+        position:absolute;
+        padding: 20px;
+        border:1px solid red
+    }
+    #repoList{
+        margin-top:100px;
+        position:relative;
+        margin-left:20%;
+        border-radius: 10px;
+        border:1px solid #ccc;
+        overflow: hidden
+    }
+
 }
