--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,13 +44,13 @@
  * GENERAL
  */
 
-img {max-width:100;}
+img {max-width:100%;}
 
 body {
     transition: opacity .25s ease;
     
     .avatar{
-        width:'50px'
+        width:50px !important;
     }
         
     .repo{
