added row highlight for cleaner navigation

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,6 +65,9 @@ body {
         background: #eee;
         border-top:1px solid #ccc;
     }
+    .repo:hover{
+        background-color:#dfd !important
+    }
     .ghPages{
         float:right;
         margin-right:10px;
