--- a/templates/userRepo.tmpl
+++ b/templates/userRepo.tmpl
@@ -1,15 +1,15 @@
 <div class="repo" id="container-<%= name %>">
 	
 	<div>
-		<a href="#<%= full_name %>"= class="link"  id="expandRepo-<%= name %>">
+	
+	    <%= (has_pages ? '<a href="' + gh_pages_url + '" class="ghPages">Open in GH-Pages</a>' : '') %>
+		<a href="#<%= full_name %>"= class="link expand" title="expand <%= name %>"  id="expandRepo-<%= name %>">
 			<%= name %>
 		</a>
-	    <%= (has_pages ? '<a href="' + gh_pages_url + '" class="ghPages">Open in GH-Pages</a>' : '') %>
-		</div>
+	
+	
+	</div>
 	<div class="branches" id="branches-<%= name %>">
-		<!-- <div class="openBranches link">
-			branches
-		</div> -->
 		<div class="repo_List" id="list-<%= name %>"></div>
 	</div>
 
