--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,17 +59,25 @@ body {
     .avatar{
         width:50px !important;
     }
-        
+    .repo.highlighted{
+         -webkit-transition: all .3s ease-in;
+        background-color:#fff;
+    }    
+
     .repo{
+         // -webkit-transition: all .2s ease-in;
         padding-left:20px;
-        background: #eee;
+        background: #eff;
         border-top:1px solid #ccc;
     }
     .repo:hover{
-        background-color:#dfd !important
+        background-color:#dfd
     }
+    
     .ghPages{
         float:right;
+        display:inline-block;
+        // position:absolute;
         margin-right:10px;
         color:#9ce
     }
@@ -83,6 +91,8 @@ body {
     .right {
         position:relative;
         margin-left:20%;
+        max-width:800px;
+        min-width:400px;
 
     }
     header{
@@ -114,6 +124,8 @@ body {
         color:inherit;
     }
     .user{
+        // transition: all .3s ease-in;
+        display:inline-block;
         width: 18%;
         margin:5px;
         font-size:15px;
@@ -122,7 +134,16 @@ body {
         box-shadow: 3px 3px 5px #bef;
         border:1px solid #9ce;
         background-color:#adf;
-        display:none;
+
+        // opacity: 0;
+        animation: fadeIn .3s ease both;
+    }
+
+    .user.selected{
+
+        background:#dfe;
+        box-shadow: 2px 2px 5px #cfd;
+        border:1px solid #9ce;
     }
     .link{
         cursor:pointer;
@@ -135,11 +156,22 @@ body {
         // border:1px solid red
     }
     #repoList{
+         // -webkit-transition: all .3s ease-in;
         border-radius: 10px;
         border:1px solid #ccc;
         overflow: hidden;
         margin-right: 10px;
     }
+    .expand{
+         -webkit-transition: all .5s ease-in;
+        border:1px solid red;
+        display:block;
+    }
+    .red {
+            // backgroundColor:#a00 !important;
+            color:#f00 !important
+        }
+    
     @media only screen and (max-width: 780px){
 
         .user{
@@ -147,4 +179,9 @@ body {
         }
     }
 
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
