some prog design changes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -164,7 +164,7 @@ body {
     }
     .expand{
          -webkit-transition: all .5s ease-in;
-        border:1px solid red;
+        // border:1px solid red;
         display:block;
     }
     .red {
